python/fastapi/tarot/k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tarot
spec:
  selector:
    matchLabels:
      app: tarot
  template:
    metadata:
      labels:
        app: tarot
    spec:
      containers:
      - name: tarot
        ports:
        - containerPort: 8000
