python/fastapi/tarot/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tarot
spec:
  selector:
    app: tarot
  ports:
  - port: 8000
    targetPort: 8000
