python/fastapi/tarot/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tarot
  labels:
    name: tarot
spec:
  rules:
  - host: HOST
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: tarot
            port: 
              number: 8000
